syntax = "proto3";
package sfcar;
option go_package=".;trippb";

enum TripStatus {
    TS_NOT_SPECIFIED = 0;
    IN_PROGRESS = 1;
    FINISHED = 2;
}

message Location {
    double latitude = 1;
    double longitude = 2;
}

message Trip {
    string start = 1;
    string end = 2;
    int32 duration_sec = 3;
    int32 fee_cent = 4; 
    Location start_pos = 5;
    Location end_pos = 6;
    TripStatus status = 7;
}

message GetTripRequest {
    string trip_id = 1;
}

message GetTripResponse {
    string id = 1;
    Trip trip = 2;
}

service TripService {
    rpc GetTrip (GetTripRequest) returns (GetTripResponse) {}
}
