syntax = "proto3";
package rental.v1;
option go_package="sfcar/rental/api/gen/v1;rentalpb";

message CreateTripRequest {
  string account_id = 1;
}

message CreateTripResponse {

}

service TripService {
  rpc CreateTrip (CreateTripRequest) returns (CreateTripResponse) {}
}